--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "apexsankey": "^1.1.2",
     "jotai": "^2.10.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
